<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">FileManager</string>
	<string name="title_section1">本地(默认)</string>
	<string name="title_section2">FTP</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_settings">设置</string>
	<string name="home_path">本地目录</string>
	<string name="icon_of_file">文件图标</string>
	<string name="delete">删除</string>
	<string name="exit">退出</string>
	<string name="property">属性</string>
	<string name="copy_bt">复制绝对路径</string>
	<string name="display_hidefile">显示隐藏文件</string>
	<string name="refresh">刷新</string>
	<string name="add_ftp_entry">添加ftp登录信息</string>
	
</resources>
